this is the working version with a loop. I like it MUCH less than the version with the button, but the assignment asked for a While Loop

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     
 </head>
 <body>
+    <!-- DISABLED BUTTON. WORKED WITH FUNCTION. WENT WITH LOOP PER INSRUCTIONS INSTEAD>
     <button onclick="start()">BEGIN</button>
+    -->
 </body>
 </html>
